--- a/res/values/wallpapers.xml
+++ b/res/values/wallpapers.xml
@@ -15,6 +15,8 @@
     <item>wallpaper_3</item>
     <item>wallpaper_4</item>
     <item>wallpaper_5</item>
+    <item>wallpaper_6</item>
+    <item>wallpaper_7</item>
     </string-array>
 
     <string-array name="info" translatable="false">
@@ -24,5 +26,7 @@
     <item>Purple Machette by manikchathli</item>
     <item>Blue Machette by manikchathli</item>
     <item>Material by hmnt96</item>
+    <item>Metal by hmnt96</item>
+    <item>Simple material by AdroitAdorKhan</item>
     </string-array>
 </resources>
