--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2013 XenonHD
+<!-- Copyright (C) 2012-2017 ParanoidAndroid Project
 
      Licensed under the GNU GPLv2 license
 
      The text of the license can be found in the LICENSE file
      or at https://www.gnu.org/licenses/gpl-2.0.txt
 -->
- <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-     xmlns:tools="http://schemas.android.com/tools"
-     android:id="@+id/pager"
-     android:layout_width="fill_parent"
-     android:layout_height="fill_parent">
 
-    <android.support.v4.view.PagerTitleStrip android:id="@+id/pager_title_strip"
+<android.support.v4.view.ViewPager
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/pager"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/page_indicator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:background="#330099cc"
-        android:textColor="#fff"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp" />
+        app:tabBackground="@drawable/page_indicator_selector"
+        app:tabGravity="center" />
 
 </android.support.v4.view.ViewPager>
