--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2013 XenonHD
+<!-- Copyright (C) 2012-2017  ParanoidAndroid Project
 
      Licensed under the GNU GPLv2 license
 
@@ -8,7 +8,5 @@
 -->
 
 <resources>
-
-    <style name="AppTheme" parent="android:Theme.Material" />
-
+    <style name="AppTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar" />
 </resources>
