--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -16,9 +16,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="#0099cc"
+        android:background="#330099cc"
         android:textColor="#fff"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp" />
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp" />
 
 </android.support.v4.view.ViewPager>
