--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2013 XenonHD
+<!-- Copyright (C) 2012-2017 ParanoidAndroid Project
 
      Licensed under the GNU GPLv2 license
 
@@ -8,9 +8,10 @@
 -->
 
 <resources>
-
     <dimen name="padding_small">8dp</dimen>
     <dimen name="padding_medium">8dp</dimen>
     <dimen name="padding_large">16dp</dimen>
-
+    <dimen name="wallpaper_text_padding">20dp</dimen>
+    <dimen name="wallpaper_text_padding_left">25dp</dimen>
+    <dimen name="wallpaper_text_size">7sp</dimen>
 </resources>
