--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -15,6 +15,35 @@
         <item>wallpaper_3</item>
         <item>wallpaper_4</item>
         <item>wallpaper_5</item>
+        <item>wallpaper_6</item>
+        <item>wallpaper_7</item>
+        <item>wallpaper_8</item>
+        <item>wallpaper_9</item>
+        <item>wallpaper_10</item>
+        <item>wallpaper_11</item>
+        <item>wallpaper_12</item>
+        <item>wallpaper_13</item>
+        <item>wallpaper_14</item>
+        <item>wallpaper_15</item>
+        <item>wallpaper_16</item>
+        <item>wallpaper_17</item>
+        <item>wallpaper_18</item>
+        <item>wallpaper_19</item>
+        <item>wallpaper_20</item>
+        <item>wallpaper_21</item>
+        <item>wallpaper_22</item>
+        <item>wallpaper_23</item>
+        <item>wallpaper_24</item>
+        <item>wallpaper_25</item>
+        <item>wallpaper_26</item>
+        <item>wallpaper_27</item>
+        <item>wallpaper_28</item>
+        <item>wallpaper_29</item>
+        <item>wallpaper_30</item>
+        <item>wallpaper_31</item>
+        <item>wallpaper_32</item>
+        <item>wallpaper_33</item>
+        <item>wallpaper_34</item>
     </string-array>
 
     <string-array name="wallpaper_options">
