--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -44,7 +44,15 @@
         <item>wallpaper_32</item>
         <item>wallpaper_33</item>
         <item>wallpaper_34</item>
-    </string-array>
+        <item>wallpaper_35</item>
+        <item>wallpaper_36</item>
+        <item>wallpaper_37</item>
+        <item>wallpaper_38</item>
+        <item>wallpaper_39</item>
+        <item>wallpaper_40</item>
+        <item>wallpaper_41</item>
+        <item>wallpaper_42</item>
+	</string-array>
 
     <string-array name="wallpaper_options">
         <item>@string/wallpaper_option_home_screen</item>
