--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -52,6 +52,11 @@
         <item>wallpaper_40</item>
         <item>wallpaper_41</item>
         <item>wallpaper_42</item>
+        <item>wallpaper_43</item>
+        <item>wallpaper_44</item>
+        <item>wallpaper_45</item>
+        <item>wallpaper_46</item>
+        <item>wallpaper_47</item>
 	</string-array>
 
     <string-array name="wallpaper_options">
