--- a/res/drawable/page_indicator_default.xml
+++ b/res/drawable/page_indicator_default.xml
@@ -13,7 +13,7 @@
             android:shape="ring"
             android:thickness="2dp"
             android:useLevel="false">
-            <solid android:color="?android:attr/colorSecondary" />
+            <solid android:color="@*android:color/accent_device_default_light" />
         </shape>
     </item>
 </layer-list>
