--- a/res/drawable/page_indicator_selected.xml
+++ b/res/drawable/page_indicator_selected.xml
@@ -11,7 +11,7 @@
             android:shape="ring"
             android:thickness="4dp"
             android:useLevel="false">
-            <solid android:color="?android:attr/colorAccent" />
+            <solid android:color="@*android:color/hint_foreground_light" />
         </shape>
     </item>
 </layer-list>
